// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`multiple-routes > bundler: vite > build and serve > should generate the expected files 1`] = `
{
  "AsyncComponent.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "AsyncComponent.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "Details.css": ._1hpn1da0 {
  color: #00f;
}
,
  "Details.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "Details.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "Home.css": .ms22la0 {
  color: red;
}
,
  "Home.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "Home.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "production/au/details/$id/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/vite-client.js",
    "/static/place/Details.js",
    "/static/place/AsyncComponent.js",
  ]
CSS: [
    "/static/place/Details.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="SCRIPTS[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      rel="stylesheet"
      href="CSS[0]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[1]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[2]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[3]"
      crossorigin
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_1hpn1da0">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      type="module"
      src="SCRIPTS[3]"
    >
    </script>
    <script
      type="module"
      src="SCRIPTS[2]"
    >
    </script>
    <script
      type="module"
      src="SCRIPTS[1]"
    >
    </script>
  </body>
</html>,
  "production/au/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/vite-client.js",
    "/static/place/Home.js",
  ]
CSS: [
    "/static/place/Home.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="SCRIPTS[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      rel="stylesheet"
      href="CSS[0]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[1]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[2]"
      crossorigin
    >
  </head>
  <body>
    <div id="app">
      <h1 class="ms22la0">
        Welcome to the Home page - au
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      type="module"
      src="SCRIPTS[2]"
    >
    </script>
    <script
      type="module"
      src="SCRIPTS[1]"
    >
    </script>
  </body>
</html>,
  "production/nz/nz/details/:id/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/vite-client.js",
    "/static/place/Details.js",
    "/static/place/AsyncComponent.js",
  ]
CSS: [
    "/static/place/Details.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="SCRIPTS[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      rel="stylesheet"
      href="CSS[0]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[1]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[2]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[3]"
      crossorigin
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_1hpn1da0">
        Welcome to the Details page - nz
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"nz"}
    </script>
    <script
      type="module"
      src="SCRIPTS[3]"
    >
    </script>
    <script
      type="module"
      src="SCRIPTS[2]"
    >
    </script>
    <script
      type="module"
      src="SCRIPTS[1]"
    >
    </script>
  </body>
</html>,
  "production/nz/nz/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/vite-client.js",
    "/static/place/Home.js",
  ]
CSS: [
    "/static/place/Home.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="SCRIPTS[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      rel="stylesheet"
      href="CSS[0]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[1]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[2]"
      crossorigin
    >
  </head>
  <body>
    <div id="app">
      <h1 class="ms22la0">
        Welcome to the Home page - nz
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"nz"}
    </script>
    <script
      type="module"
      src="SCRIPTS[2]"
    >
    </script>
    <script
      type="module"
      src="SCRIPTS[1]"
    >
    </script>
  </body>
</html>,
  "vite-client.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vite-client.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`multiple-routes > bundler: webpack > build and serve > should generate the expected files 1`] = `
{
  "5.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "5.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "AsyncComponent.chunk.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "AsyncComponent.chunk.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Details-959bfbcac2e62e53d74f.css": ._1hpn1da0 {
  color: #00f;
}

/*# sourceMappingURL=handlers-Details-959bfbcac2e62e53d74f.css.map*/
,
  "handlers-Details-959bfbcac2e62e53d74f.css.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Details.chunk.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Details.chunk.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Home-2d237e279ab26e7d9ff4.css": .ms22la0 {
  color: red;
}

/*# sourceMappingURL=handlers-Home-2d237e279ab26e7d9ff4.css.map*/
,
  "handlers-Home-2d237e279ab26e7d9ff4.css.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Home.chunk.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Home.chunk.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "production/au/details/$id/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime.js",
    "/static/place/5.js",
    "/static/place/main.js",
    "/static/place/handlers-Details.chunk.js",
    "/static/place/AsyncComponent.chunk.js",
  ]
CSS: [
    "/static/place/handlers-Details-959bfbcac2e62e53d74f.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="SCRIPTS[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Details"
      rel="stylesheet"
      href="CSS[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[3]"
    >
    <link
      data-chunk="handlers-Details"
      rel="preload"
      as="script"
      href="SCRIPTS[4]"
    >
    <link
      data-chunk="AsyncComponent"
      rel="preload"
      as="script"
      href="SCRIPTS[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_1hpn1da0">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [1,0]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Details"
      src="SCRIPTS[4]"
    >
    </script>
    <script
      async
      data-chunk="AsyncComponent"
      src="SCRIPTS[5]"
    >
    </script>
  </body>
</html>,
  "production/au/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime.js",
    "/static/place/5.js",
    "/static/place/main.js",
    "/static/place/handlers-Home.chunk.js",
  ]
CSS: [
    "/static/place/handlers-Home-2d237e279ab26e7d9ff4.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="SCRIPTS[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Home"
      rel="stylesheet"
      href="CSS[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[3]"
    >
    <link
      data-chunk="handlers-Home"
      rel="preload"
      as="script"
      href="SCRIPTS[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="ms22la0">
        Welcome to the Home page - au
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [2]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Home"
      src="SCRIPTS[4]"
    >
    </script>
  </body>
</html>,
  "production/nz/nz/details/:id/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime.js",
    "/static/place/5.js",
    "/static/place/main.js",
    "/static/place/handlers-Details.chunk.js",
    "/static/place/AsyncComponent.chunk.js",
  ]
CSS: [
    "/static/place/handlers-Details-959bfbcac2e62e53d74f.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="SCRIPTS[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Details"
      rel="stylesheet"
      href="CSS[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[3]"
    >
    <link
      data-chunk="handlers-Details"
      rel="preload"
      as="script"
      href="SCRIPTS[4]"
    >
    <link
      data-chunk="AsyncComponent"
      rel="preload"
      as="script"
      href="SCRIPTS[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_1hpn1da0">
        Welcome to the Details page - nz
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"nz"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [1,0]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Details"
      src="SCRIPTS[4]"
    >
    </script>
    <script
      async
      data-chunk="AsyncComponent"
      src="SCRIPTS[5]"
    >
    </script>
  </body>
</html>,
  "production/nz/nz/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime.js",
    "/static/place/5.js",
    "/static/place/main.js",
    "/static/place/handlers-Home.chunk.js",
  ]
CSS: [
    "/static/place/handlers-Home-2d237e279ab26e7d9ff4.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="SCRIPTS[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Home"
      rel="stylesheet"
      href="CSS[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[3]"
    >
    <link
      data-chunk="handlers-Home"
      rel="preload"
      as="script"
      href="SCRIPTS[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="ms22la0">
        Welcome to the Home page - nz
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"nz"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [2]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Home"
      src="SCRIPTS[4]"
    >
    </script>
  </body>
</html>,
  "runtime.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;
